add fetches to data input, playing with revalidte fetch

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,14 @@
 {
     "cSpell.words": [
         "exchangedate",
+        "formated",
+        "navlinks",
         "zustand",
         "валют",
         "Введіть",
         "Зберегти",
         "Значение",
+        "значення",
         "Конвертер",
         "мене",
         "придбати",
